# llm-spider

./: Cargo.toml  README.md  flake.nix  justfile  spec.md
.github/workflows/: ci.yml
docs/: docs.json  index.mdx
docs/spider/: cli-usage.mdx  rust-usage.mdx
plans/: 2026-02-04_llm-spider-mvp.md
proto/template/v1/: greetings.proto
src/: cli.rs  lib.rs  main.rs  trust.rs
src/openai/: mod.rs
src/spider/: mod.rs  trust.rs
tests/: cli_hello.rs  cli_spider.rs  spider_basic.rs
