[package]
name = "llm-spider"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.27", features = ["derive"] }
htmd = "0.5"
humantime = "2.1.0"
readability-rust = "0.1"
reqwest = { version = "0.12.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
scraper = "0.20.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
spider = { version = "2.39.21", default-features = false, features = ["sync"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = "2.5.4"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
